--- a/assets/images/css/style.css
+++ b/assets/images/css/style.css
@@ -16,3 +16,45 @@ body {
     width: 100% !important;
     z-index: 1 !important;
   }
+
+/* Banner and related styles */
+.banner {
+  text-align: center;
+  background-image: url('assets/images/background pic.jpg');
+  background-size: cover;
+  background-position: center;
+  overflow: hidden;
+  padding-top: 100px;
+  opacity: 0.8;
+  line-height: 1.5;
+}
+
+/* Tag and Title styles */
+.tag {
+  background-color: rgba(200, 200, 200, 0.5);
+  color: black;
+  padding: 10px;
+  border-radius: 5px;
+  display: table;
+  margin: 10px auto;
+}
+
+.title {
+  background-color: #222;
+  color: white;
+  opacity: 0.8;
+}
+
+/* Profile Image */
+.profile-image {
+  margin-top: 50px;
+  width: 150px;
+  height: 150px;
+  border-radius: 60%;
+  border: 3px solid rgb(255, 255, 255);
+  transition: all 0.5s;
+}
+
+.banner .profile-image:hover {
+  transform: scale(1.2) rotate(-20deg);
+}
