--- a/assets/images/css/style.css
+++ b/assets/images/css/style.css
@@ -78,3 +78,22 @@ body {
   padding-top: 60px;
   border-radius: 5%;
 }
+/* Education Section */
+.education-right {
+  padding-top: 80px;
+  margin: 15px;
+  font-weight: 10;
+  border-top: 3px dashed rgba(220, 220, 220, 0.386);
+  color: rgba(255, 255, 255, 0.7);
+  padding-left: 700px;
+  padding-bottom: 65px;
+}
+
+.image-left {
+  float: left;
+  width: 620px;
+  height: 320px;
+  padding-top: 50px;
+  padding-left: 20px;
+  border-radius: 5%;
+}
