--- a/assets/images/css/style.css
+++ b/assets/images/css/style.css
@@ -97,3 +97,10 @@ body {
   padding-left: 20px;
   border-radius: 5%;
 }
+
+/* Positioning for education details */
+#position1,
+#position2,
+#position3 {
+  display: inline-block;
+}
